Mudando titulo da pagina

--- a/Primeirapagina.html
+++ b/Primeirapagina.html
@@ -1,6 +1,9 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <HTML lang="PT-BR">
     <head>
+        <meta charset="utf-8"> 
+        <title>Hello World</title>
+
 
     </head>
     <body>
