--- a/Tituloseparagrafos.html
+++ b/Tituloseparagrafos.html
@@ -8,12 +8,14 @@
 
     <body>
     
-        <h1> Titulo nivel 1 </h1>
-        <h2> Titulo nivel 2 </h2>
-        <h3> Titulo nivel 3 </h3>
+        <h1> Titulo </h1>
+        <h2> Subtitulo </h2>
+        <p> Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker. </p>
+    
+        <!-- <h3> Titulo nivel 3 </h3>
         <h4> Titulo nivel 4 </h4>
         <h5> Titulo nivel 5 </h5>
-        <h6> Titulo nivel 6 </h6>
+        <h6> Titulo nivel 6 </h6> -->
 
     </body>
 
