--- a/Listas.html
+++ b/Listas.html
@@ -16,13 +16,34 @@
         <li>Luminaria</li>
     </ul>
     <h2>Lista ordenada.</h2>
-    <ul>
+    <ol type="A"> 
         <li>Ventilador</li>
         <li>Microondas</li>
         <li>Geladeira</li>
         <li>AirFrier</li>
         <li>Luminaria</li>
-    </ul>
+    </ol>
+    <h2>Lista ordenada.</h2>
+    <ol type="I"> 
+        <li>Ventilador</li>
+        <li>Microondas</li>
+        <li>Geladeira</li>
+        <li>AirFrier</li>
+        <li>Luminaria</li>
+    </ol>
+    <h2>Lista de descrição.</h2>
+    <dl> 
+        <dt>Ventilador</dt>
+            <dd>Objeto para ventilar ambientes.</dd>
+        <dt>Microondas</dt>
+            <dd>Feito para esquentar/aquecer alimnentos.</dd>
+        <dt>Geladeira</dt>
+            <dd>Utilizada para resfriar alimentos.</dd>
+        <dt>AirFrier</dt>
+            <dd>Utilizada para fritar alimentos sem uso de óleo.</dd>
+        <dt>Luminaria</dt>
+            <dd>Ajuda na iluminação de ambientes.</dd>
+    </dl>
 
 </body>
 </html>
