listas - lista dentro de lista

--- a/Listas.html
+++ b/Listas.html
@@ -15,6 +15,24 @@
         <li>AirFrier</li>
         <li>Luminaria</li>
     </ul>
+
+    <h2>Lista dentro de lista.</h2>
+    <ul>
+        <li>Celular</li>
+            <ol>
+                <li>Motorola</li>
+                <li>Lg</li>
+                <li>Apple</li>
+                <li>Iphone</li>
+                <li>Sansung</li>
+            </ol>
+        <li>Microondas</li>
+            <ol>
+                <li>Brastemp</li>
+            </ol>
+
+    </ul>
+
     <h2>Lista ordenada.</h2>
     <ol type="A"> 
         <li>Ventilador</li>
@@ -23,6 +41,7 @@
         <li>AirFrier</li>
         <li>Luminaria</li>
     </ol>
+
     <h2>Lista ordenada.</h2>
     <ol type="I"> 
         <li>Ventilador</li>
@@ -31,6 +50,7 @@
         <li>AirFrier</li>
         <li>Luminaria</li>
     </ol>
+
     <h2>Lista de descrição.</h2>
     <dl> 
         <dt>Ventilador</dt>
