--- a/02-titulosEparagrafos/Tituloseparagrafos.html
+++ b/02-titulosEparagrafos/Tituloseparagrafos.html
@@ -11,6 +11,10 @@
         <h1> Titulo </h1>
         <h2> Subtitulo </h2>
         <p> Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. <br> Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. <br>Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker. </p>
+
+        <h2>Alterando Paragrafo</h2>
+        <p>Fazendo alteração no segundo paragrafo.</p>
+
     
         <!-- <h3> Titulo nivel 3 </h3>
         <h4> Titulo nivel 4 </h4>
