Alterando arquivo 04-Imagens

--- a/04-Imagens/Imagens.html
+++ b/04-Imagens/Imagens.html
@@ -9,7 +9,7 @@
     <h1>Trabalhando com Imagens</h1>
     <img src="IMG/Imagemhtml5.png" alt="HTML5" width="50%">
     
-
+   <p> Alteração na imagem. </p>
 
 
 
